fixed timesheet table row alignment

--- a/src/pages/Timesheet/Timesheet.scss
+++ b/src/pages/Timesheet/Timesheet.scss
@@ -38,12 +38,6 @@
 				margin-left: 150px;
 				text-align: center;
 			}
-
-			.rate-col,
-			.total-hrs-col,
-			.total-amount-col {
-				margin-left: 100px;
-			}
 		}
 	}
 }
